--- a/_sass/modal.scss
+++ b/_sass/modal.scss
@@ -17,6 +17,7 @@
         padding: 0;
         display: inline-block;
         padding: .5rem;
+        z-index: 1;
     }
 
     @media only screen and (max-width: 750px){
