--- a/_sass/pages/single-gally.scss
+++ b/_sass/pages/single-gally.scss
@@ -439,8 +439,8 @@
 }
 
 .share-module__drawer{
-
     display: inline-block;
+    display: flex;
 }
 
 .share-module button {
@@ -477,8 +477,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-box-pack: center;
+    -webkit-box-align: center;
     border: 1px solid #ddd;
-    background: #fff;
+    background: transparent;
     width: 4rem;
     height: 4rem;
     border-width: 1px 1px 0;
@@ -488,6 +490,9 @@
     transition: fill .125s ease-in-out;
 }
 
+.modal_share path{
+    fill: #fff !important;
+}
 .share-module path {
     fill: #5e5e5e;
 }
