added links to nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -32,10 +32,12 @@
                                     <li class="list-item"><a arial-label="Gallery" href="{{ '/photo-gallery/' | relative_url }}" class="nav-link item-link title">Gallery</a></li>
                                     <li class="list-item"><a arial-label="About Us" href="{{ '/about/' | relative_url }}" class="nav-link item-link title">About Us</a></li>
                                     <li class="list-item"><a arial-label="Subscribe" href="#" class="nav-link item-link title">Subscribe</a></li>
-                                    <li class="list-item"><a aria-label="" href="{{ '/tv/' | relative_url }}" class="nav-link item-link title">Carrers</a></li>
+                                    <li class="list-item"><a aria-label="Carrers" href="{{ '/tv/' | relative_url }}" class="nav-link item-link title">Carrers</a></li>
                                     <li class="list-item"><a arial-label="Contact Us" href="{{ '/about/#contact-us/' | relative_url }}" class="nav-link item-link title">Contact Us</a></li>
-                                    <li class="list-item"><a aria-label="" href="{{ '/opinions/' | relative_url }}" class="nav-link item-link title">Opinions</a></li>
-                                    <li class="list-item"><a aria-label="" href="#" class="nav-link item-link title">Terms and Conditions</a></li>
+                                    <li class="list-item"><a aria-label="opinions" href="{{ '/opinions/' | relative_url }}" class="nav-link item-link title">Opinions</a></li>
+                                    <li class="list-item"><a aria-label="Terms and Condition" href="{{ '/terms/' | relative_url }}" class="nav-link item-link title">Terms and Conditions</a></li>
+                                    <li class="list-item"><a aria-label="Privacy Policy" href="{{ '/privacy/' | relative_url }}" class="nav-link item-link title">Privacy Policy</a></li>
+                                    <li class="list-item"><a aria-label="Privacy Policy" href="{{ '/explore/' | relative_url }}" class="nav-link item-link title">Explore</a></li>
                                 </ul>
                             </div>
                             <h4 class="mini-title">Follow us ...</h4>
