--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -30,4 +30,4 @@ sitemap: false
 @import 'pages/video-gallery';
 @import 'pages/search';
 @import 'modal';
-@import 'share-drawer'
+// @import 'share-drawer'
