--- a/_includes/resp-image.html
+++ b/_includes/resp-image.html
@@ -1,14 +1,14 @@
-{% capture imagePath %}{{ site.image-path | relative_url }}{{ include.name | relative_url }}{%endcapture%}
+{% capture imagePath %}{{ site.image-path }}{{ include.name }}{%endcapture%}
 {% if include.type == 'data-src' %}
 
-  <img loading='lazy' src="{{ imagePath | relative_url }}" data-src="{{imagePath | relative_url }}" 
+  <img src="{{ imagePath | relative_url }}" data-src="{{imagePath | relative_url }}" 
   
           {% if include.data-srcset %} data-srcset="{{imagePath | relative_url }} 120w, {{imagePath | relative_url }} 768w, {{imagePath | relative_url }} 240w"{%endif%}
           {% if include.data-expand %} data-expand="{{ include.data-expand }}" {% endif %}
           {% if include.sizes %} sizes="{{ include.sizes }}" {% endif %}
           {% if include.alt %} alt="{{ include.alt }}" {% endif %}
           {% if include.title %} title="{{ include.title }}" {% endif %}
-          {%if include.class %} class = "{{ include.class }}"{%endif%} />  
+          {%if include.class %} class = "{{ include.class }}" {%endif%} />  
  
 {% else %}
   <img src="{{ imagePath | relative_url }}"
