--- a/_layouts/feature.html
+++ b/_layouts/feature.html
@@ -17,7 +17,7 @@ layout: default
                     </div>
                     <div class="third-tier compact-list">
                         <div class="infinite-container">
-                            <div class="clerarfix">
+                            <div class="clearfix">
                                 <div class="features-fragment">
                                     <div class="container-fluid">
 
