--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -96,7 +96,8 @@ layout: default
                                         <figure>
                                             <picture class="artdirection--123">
                                                 <noscript><img src="{{ site.url}}/{{ site.image-path }}{{ feature.images.path}}" srcset="" alt=" {{ feature.images.caption }} " title="{{ feature.images.caption }}" class="img featured-image"></noscript>
-                                                <img data-expand="-60" data-src="{{ site.url}}/{{ site.image-path }}{{ feature.images.path}}" srcset="" alt=" {{ feature.images.caption }} " title="{{ feature.images.caption }}" class="img featured-image blur-up lazyload"> 
+                                                <!-- <img data-expand="-60" data-src="{{ site.url}}/{{ site.image-path }}{{ feature.images.path}}" srcset="" alt=" {{ feature.images.caption }} " title="{{ feature.images.caption }}" class="img featured-image blur-up lazyload">  -->
+                                                {% include resp-image.html type="data-src" name=img data-srcset=img data-expand="-90" alt=feature.images.caption title=feature.images.caption class="lazyload blur-up featured-image img" sizes="(min-width: 64em) 220x, (min-width: 48em) 150px, 125px"%}
                                             </picture>
                                         </figure>
                                     </a>     
