--- a/_includes/gallery/modal.html
+++ b/_includes/gallery/modal.html
@@ -76,16 +76,19 @@
                   </div>
               </div>
           </div>
-          <!-- <div class="share-module share-module--dark share-module--horizontal gallery_dtl--module">
+          <div class="share-module share-module--dark share-module--horizontal gallery_dtl--module" title="share">
               <ul class="share-module__primary">
                   <li>
-                      <button class="share-module__primary-btn">
-                          <span class="sr-only">Share on Facebook</span>
-                          <svg class="fb-share-button social-button" x="0px" y="0px" viewBox="0 0 42 46.6"><path class="fb-mark mark" fill-rule="evenodd" clip-rule="evenodd" fill="#010101" d="M24.5,18.1c0,0.9,0,2.4,0,2.4s-1.8-0.2-2.2,0.5c-0.2,0.4-0.1,1.5-0.1,2.2c0.8,0,1.6,0,2.4,0c-0.2,0.9-0.3,1.5-0.5,2.3c-0.7,0-1.9,0-1.9,0v7.5c0,0-2.2,0-3.3,0c0-2.3,0-5,0-7.5c-0.5,0-0.9,0-1.4,0c0-0.9,0-1.5,0-2.4c0.5,0,0.9,0,1.4,0c0.1-1.7,0.1-3.4,1-4.3C20.8,17.9,21.7,18.1,24.5,18.1z"></path><path class="ring" d="M21,46.1c-11.3,0-20.5-9.2-20.5-20.5S9.7,5.1,21,5.1c0.3,0,0.5,0.2,0.5,0.5S21.3,6.1,21,6.1c-10.8,0-19.5,8.7-19.5,19.5S10.3,45.1,21,45.1s19.5-8.7,19.5-19.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5C41.5,36.9,32.3,46.1,21,46.1z"></path><path class="arrow" d="M17.3,10.6c-0.1,0-0.3,0-0.4-0.1c-0.2-0.2-0.2-0.5,0-0.7l4.2-4.2L17,1.4c-0.2-0.2-0.2-0.5,0-0.7s0.5-0.2,0.7,0l4.5,4.5c0.2,0.2,0.2,0.5,0,0.7l-4.5,4.5C17.6,10.5,17.4,10.6,17.3,10.6z"></path></svg>
-                      </button>
+                      <a href="https://twitter.com/intent/tweet?text=&url={{site.url}}{{page.url}}{{page.image}}">
+                        <button class="share-module__primary-btn modal_share">
+                            <span class="sr-only">Share on Facebook</span>
+                            <svg class="fb-share-button social-button" x="0px" y="0px" viewBox="0 0 42 46.6"><path class="fb-mark mark" fill-rule="evenodd" clip-rule="evenodd" fill="#010101" d="M24.5,18.1c0,0.9,0,2.4,0,2.4s-1.8-0.2-2.2,0.5c-0.2,0.4-0.1,1.5-0.1,2.2c0.8,0,1.6,0,2.4,0c-0.2,0.9-0.3,1.5-0.5,2.3c-0.7,0-1.9,0-1.9,0v7.5c0,0-2.2,0-3.3,0c0-2.3,0-5,0-7.5c-0.5,0-0.9,0-1.4,0c0-0.9,0-1.5,0-2.4c0.5,0,0.9,0,1.4,0c0.1-1.7,0.1-3.4,1-4.3C20.8,17.9,21.7,18.1,24.5,18.1z"></path><path class="ring" d="M21,46.1c-11.3,0-20.5-9.2-20.5-20.5S9.7,5.1,21,5.1c0.3,0,0.5,0.2,0.5,0.5S21.3,6.1,21,6.1c-10.8,0-19.5,8.7-19.5,19.5S10.3,45.1,21,45.1s19.5-8.7,19.5-19.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5C41.5,36.9,32.3,46.1,21,46.1z"></path><path class="arrow" d="M17.3,10.6c-0.1,0-0.3,0-0.4-0.1c-0.2-0.2-0.2-0.5,0-0.7l4.2-4.2L17,1.4c-0.2-0.2-0.2-0.5,0-0.7s0.5-0.2,0.7,0l4.5,4.5c0.2,0.2,0.2,0.5,0,0.7l-4.5,4.5C17.6,10.5,17.4,10.6,17.3,10.6z"></path></svg>
+                        </button>                          
+                      </a>
+
                   </li>
                   <li>
-                      <button class="share-module__primary-btn">
+                      <button class="share-module__primary-btn modal_share">
                           <span class="sr-only">Share on Twitter</span>
                           <svg class="twitter-button" x="0px" y="0px" viewBox="0 0 42 46.6"><path class="twitter-mark mark" fill-rule="evenodd" clip-rule="evenodd" fill="#010101" d="M24.3,19.4c1.2,0,1.8,0.4,2.4,1c0.5,0,1.2-0.3,1.6-0.5c0.1-0.1,0.3-0.1,0.4-0.2c-0.2,0.6-0.5,1.1-1,1.4c-0.1,0.1-0.2,0.2-0.3,0.2c0,0,0,0,0,0c0.7,0,1.2-0.3,1.7-0.5c0,0,0,0,0,0c-0.3,0.4-0.6,0.9-1,1.2c-0.2,0.1-0.3,0.3-0.5,0.4c0,0.7,0,1.4-0.1,1.9c-0.8,3.4-2.8,5.7-5.9,6.7c-1.1,0.4-3,0.5-4.3,0.2c-0.6-0.2-1.2-0.3-1.8-0.6c-0.3-0.1-0.6-0.3-0.9-0.4c-0.1-0.1-0.2-0.1-0.3-0.2c0.3,0,0.6,0.1,1,0c0.3,0,0.6,0,0.9-0.1c0.7-0.2,1.3-0.3,1.8-0.7c0.3-0.1,0.6-0.3,0.8-0.5c-0.3,0-0.6-0.1-0.9-0.2c-1-0.3-1.6-1-1.9-1.9c0.3,0,1.2,0.1,1.4-0.1c-0.4,0-0.7-0.2-1-0.4c-0.8-0.5-1.4-1.3-1.4-2.6c0.1,0,0.2,0.1,0.3,0.1c0.2,0.1,0.4,0.1,0.6,0.2c0.1,0,0.3,0.1,0.4,0h0c-0.2-0.2-0.4-0.3-0.6-0.5c-0.5-0.6-1-1.6-0.7-2.8c0.1-0.3,0.2-0.6,0.3-0.8c0,0,0,0,0,0c0.1,0.1,0.2,0.2,0.3,0.3c0.3,0.3,0.6,0.6,0.9,0.9c1.1,0.9,2.1,1.4,3.7,1.8c0.4,0.1,0.9,0.2,1.4,0.2c-0.1-0.4-0.1-1,0-1.4c0.3-1,0.9-1.7,1.7-2c0.2-0.1,0.4-0.2,0.7-0.2C24,19.5,24.1,19.5,24.3,19.4z"></path><path class="ring" d="M21,46C9.7,46,0.5,36.8,0.5,25.5S9.7,5,21,5c0.3,0,0.5,0.2,0.5,0.5S21.3,6,21,6C10.2,6,1.5,14.8,1.5,25.5S10.2,45,21,45s19.5-8.7,19.5-19.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5C41.5,36.8,32.3,46,21,46z"></path><path class="arrow" d="M17.3,10.6c-0.1,0-0.3,0-0.4-0.1c-0.2-0.2-0.2-0.5,0-0.7l4.2-4.2l-4.1-4.1c-0.2-0.2-0.2-0.5,0-0.7s0.5-0.2,0.7,0l4.5,4.5c0.2,0.2,0.2,0.5,0,0.7l-4.5,4.5C17.5,10.5,17.4,10.6,17.3,10.6z"></path></svg>
                       </button>
@@ -93,16 +96,30 @@
               </ul>
 
               <ul class="share-module__drawer">
-                  <li class="share-module__drawer-item share-module__drawer-trigger">
+                    <li class="share-module__drawer-item share-module__drawer-trigger modal_share">
                       <button class="share-module__drawer-trigger-btn">
                           <span class="sr-only">Open share drawer</span>
                           <svg class="share-button" x="0px" y="0px" viewBox="204 371.2 205.5 49.5">
                               <path class="share-mark mark" d="M204,396c0-13.1,11.7-24.8,24.8-24.8c14.6,0,24.8,11.7,24.8,24.8c0,13.1-11.7,24.8-24.8,24.8C215.7,420.8,204,409.1,204,396z M282.7,396c0-13.1,11.7-24.8,24.8-24.8c14.6,0,24.8,11.7,24.8,24.8c0,13.1-11.7,24.8-24.8,24.8C292.9,420.8,282.7,409.1,282.7,396z M359.9,396c0-13.1,11.7-24.8,24.8-24.8s24.8,11.7,24.8,24.8c0,13.1-11.7,24.8-24.8,24.8S359.9,409.1,359.9,396z"></path>
                           </svg>
                       </button>
-                  </li>
+                    </li>
+                    <li class="share-module__drawer-item state-enter-done modal_share">
+                      <button class="share-module__drawer-btn">
+                          <span class="sr-only">Share via Email</span>
+                          <svg class="email share-button" x="0px" y="0px" viewBox="0 0 16.5 11.5"><path class="email-mark mark" d="M15.7,0H15H1.5H0.8H0v11.5h16.5V0H15.7z M14.8,1.5L8.3,5.8L1.7,1.5H14.8z M1.5,10V3.2l6.7,4.5L15,3.2V10H1.5z"></path></svg>
+                        </button>
+                    </li>
+                    <li class="share-module__drawer-item state-enter-done modal_share">
+                        <button class="share-module__drawer-btn">
+                            <span class="sr-only">Share via Link</span>
+                            <svg class="link share-button" x="0px" y="0px" viewBox="0 0 15 15">
+                                <path class="link-mark mark" d="M5.5,11.9l-0.8,0.8c-0.7,0.7-1.7,0.7-2.4,0c-0.3-0.3-0.5-0.7-0.5-1.2s0.2-0.9,0.5-1.2l2.8-2.8C5.7,7,6.8,6.1,7.6,6.9 c0.4,0.4,1,0.4,1.3,0c0.4-0.4,0.4-1,0-1.3C7.6,4.2,5.6,4.5,3.8,6.2L1,9c-0.7,0.7-1,1.6-1,2.5c0,0.9,0.4,1.8,1,2.5 c0.7,0.7,1.6,1,2.5,1c0.9,0,1.8-0.3,2.5-1l0.8-0.8c0.4-0.4,0.4-0.9,0-1.3C6.4,11.5,5.9,11.5,5.5,11.9z M14,1.1 c-1.4-1.4-3.5-1.5-4.8-0.2L8.2,1.9c-0.4,0.4-0.4,0.9,0,1.3c0.4,0.4,1,0.4,1.3,0l0.9-0.9c0.7-0.7,1.6-0.4,2.2,0.2 c0.3,0.3,0.5,0.7,0.5,1.2c0,0.4-0.2,0.9-0.5,1.2l-3,3c-1.4,1.4-2,0.7-2.3,0.4c-0.4-0.4-1-0.4-1.3,0c-0.4,0.4-0.4,1,0,1.3 c0.6,0.6,1.3,0.9,2.1,0.9c0.9,0,1.9-0.5,2.8-1.4l3-3c0.7-0.7,1-1.6,1-2.5C15,2.7,14.6,1.8,14,1.1z"></path>
+                            </svg>
+                        </button>
+                    </li>
               </ul>
-          </div> -->
+          </div>
       </div>                
   </div>
 </div>
