--- a/_includes/gallery/mobile.html
+++ b/_includes/gallery/mobile.html
@@ -31,7 +31,7 @@
                 <ul class="main-carousel mobile-gallery__carousel mobile-gallery__carousel-ul">
                     {% for photo in page.images %}
                     <li class="mobile-gallery__carousel-item">
-                        <img src="{{site.image-path | relative_url }}/{{ photo.image | relative_url }}" alt="" class="carousel-img" data-flickity-lazyload="{{site.image-path | relative_url }}{{ photo.image | relative_url }}">
+                        <img src="{{site.image-path }}/{{ photo.image }}" alt="" class="carousel-img" data-flickity-lazyload="{{site.image-path | relative_url }}{{ photo.image | relative_url }}">
                         <div class="mobile-gallery__info">
                             <div class="mobile-gallery__info-text">
                                 <div class="mobile-gallery__title">
