--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -96,6 +96,7 @@ layout: default
                                         <figure>
                                             <picture class="artdirection--123">
                                                 <noscript><img src="{{ site.url}}/{{ site.image-path }}{{ feature.images.path}}" srcset="" alt=" {{ feature.images.caption }} " title="{{ feature.images.caption }}" class="img featured-image"></noscript>
+                                                {% capture img %}{{ feature.images.path }}{% endcapture %}
                                                 <!-- <img data-expand="-60" data-src="{{ site.url}}/{{ site.image-path }}{{ feature.images.path}}" srcset="" alt=" {{ feature.images.caption }} " title="{{ feature.images.caption }}" class="img featured-image blur-up lazyload">  -->
                                                 {% include resp-image.html type="data-src" name=img data-srcset=img data-expand="-90" alt=feature.images.caption title=feature.images.caption class="lazyload blur-up featured-image img" sizes="(min-width: 64em) 220x, (min-width: 48em) 150px, 125px"%}
                                             </picture>
@@ -334,7 +335,7 @@ layout: default
                     <a href="{{ latest.url | relative_url }}">
                         <div class="latest-module-content">
                             <div class="latest-img pos-rel bd-ovf" style="padding-bottom: 56.38888888888888886%;">
-                                <noscript><img src="{{ site.image-path | relative_url }}{{ latest.images.path | relative_url }}"  alt=" {{ latest.images.caption }} " title="{{ latest.images.caption }}" ></noscript>
+                                <noscript><img src="{{ site.image-path | relative_url }}{{ latest.images.path  }}"  alt=" {{ latest.images.caption }} " title="{{ latest.images.caption }}" ></noscript>
                             <!--    <img data-src="{{ site.image-path | relative_url }}{{ latest.images.path | relative_url }}" data-expand="-110" data-srcset="{{ site.url}}/{{ site.image-path }}{{ latest.images.path}} 360w, {{ site.url}}/{{ site.image-path }}{{ latest.images.path}} 720w" sizes="(min-width: 1000em) 360px" alt=" {{ latest.images.caption }} " title="{{ latest.images.caption }}" class=" blur-up lazyload"> -->
                                 {% include resp-image.html type='data-src' name=latest.images.path data-expand="-110" data-srcset=latest.images.path alt=latest.images.caption sizes="(min-width: 1000em) 360px" class="lazyload" %}
                             </div>
