--- a/_sass/pages/post.scss
+++ b/_sass/pages/post.scss
@@ -81,8 +81,6 @@ article{
     }
     @media #{$lg-scn--up}{
         margin: 0 40px;
-        margin-left: -140px;
-        
     }
     @media #{$xlg-scn--up}{
         margin: 0 90px;
@@ -158,7 +156,7 @@ article{
         line-height: 1.12;
         // margin: 10px auto;
         text-align: left;
-        max-width: 500px;
+        // max-width: 500px;
 
         @media (min-width: 470px){
             font-size: 32px;
