adjusted post layout

--- a/_includes/article-body.html
+++ b/_includes/article-body.html
@@ -20,8 +20,8 @@
     <div class="post-content">
         <p>{{content}}</p>
     </div>
-    <div class="post-message">
+    <!-- <div class="post-message">
         <p class="hello">
         </p>
-    </div>
+    </div> -->
 </div>
