--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -228,7 +228,7 @@ layout: default
                             {% for video in site.gallery %}
                             <div class="featured-item featured-card featured-video">
                                 <div class="image module--visual">
-                                    <a href={{ "/404/" | relative_url }}>
+                                    <a href="">
                                     <i class="fa fa-play-circle"></i>
                                     </a>
                                         <figure>
@@ -240,7 +240,7 @@ layout: default
                                         </figure>     
                                 </div>
                                 <div class="fetured-details">
-                                    <h4 class="video-tag">{{ video. tags }}</h4>
+                                    <h4 class="video-tag">{{ video.tags }}</h4>
                                     <a href="" class="featured-title-link fetured-link">
                                         <h2 class="featured-title title">{{ video.title }}</h2>
                                     </a>
