included algolia search
*installed instant js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,5 +32,6 @@ layout: compress
     </div>        
     {% include mobi-footer.html %}
     {% include scripts.html %}
-</body>
+    {% include algolia_search.html %}
+
 </html>
