--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -20,14 +20,14 @@ layout: page
                         <input type="search" id="search-box" name="query" />
                     </label>
                     
-                    <input type="submit" value="search" class="submit-btn">                      
+                    <!-- <input type="submit" value="search" class="submit-btn">                       -->
                 </div>
             </div>
         </form>       
     </div>
 
     <div class="search-results">
-        <div class="article-container"></div>
+        <div class="article-container">
             <div class="container">
                 <div id="article-container" class="article-inner-container" data-page="{{ currentPage }}" data-totalPages="{{ paginator.total_pages }}">
                     <ul id="search-results">
@@ -39,6 +39,7 @@ layout: page
                     </ul>
                 </div> 
             </div>
+        </div>
     </div>
         
 </div>
@@ -64,5 +65,6 @@ layout: page
       {% endfor %}
     };
   </script>
-  <script src="{{ site.baseurl }}/assets/js/Vendor/lunr.min.js"></script>
-  <script src="{{ site.baseurl }}/assets/js/Vendor/search.js"></script>
+  <!-- <script src="{{ site.baseurl }}/assets/js/Vendor/lunr.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/Vendor/search.js"></script> -->
+ 
