--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -9,7 +9,7 @@ layout: page
            <p class="search-text"></p> 
         </div>
         
-        <form action="{{ site.baseurl }}/search/" method="get" role="search">
+        <!-- <form action="{{ site.baseurl }}/search/" method="get" role="search">
             <div class="form-content margin-utility">
                 <div class="search-bar">
                     <label for="search-box" class="whole-search-label">
@@ -20,10 +20,10 @@ layout: page
                         <input type="search" id="search-box" name="query" />
                     </label>
                     
-                    <!-- <input type="submit" value="search" class="submit-btn">                       -->
+                    <input type="submit" value="search" class="submit-btn">                      
                 </div>
             </div>
-        </form>       
+        </form>        -->
     </div>
 
     <div class="search-results">
