--- a/_includes/algolia_search.html
+++ b/_includes/algolia_search.html
@@ -1,10 +1,11 @@
 <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.3.3/dist/instantsearch.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
-<script src="{{ site.baseurl }}/assets/js/algolia_search.js"> </script>
-<!-- <script>
+
+
+<script>
   "use strict"
-  const instantsearch = require('instantsearch.js');
+  
   //instanciating instantsearch.js with Algolia
 
   var search = instantsearch({
@@ -74,4 +75,4 @@
   );
 
   search.start();
-</script> -->
+</script>
