--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
                         </button>
                         <div class="side-menu fx-left">
                             <!-- SEARCH BAR -->
-                            <div class="search-bar">
+                            <div class="search-bar search-wrapper" tabindex="-1">
                                 <form action ="{{ site.baseurl }}/search/" method="get" role="search">
                                     <div class="form-group .fonts-loaded border-style">
                                         <label for=" search">
