removed comments as it affected code when minified

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,5 +33,5 @@ layout: compress
     {% include mobi-footer.html %}
     {% include scripts.html %}
     {% include algolia_search.html %}
-
+</body>
 </html>
