--- a/_sass/pages/features.scss
+++ b/_sass/pages/features.scss
@@ -870,6 +870,11 @@
     & .module_img.module__visual {
         width: 150px;
         min-width: 150px;
+        @media (max-width: 500px){      
+            width: 120px;
+            min-width: 120px;
+            max-height: 120px;
+        }
         & a.image-link {
             height: 100%;
         }
@@ -891,7 +896,9 @@
     & .article-details.module__article-details {
         background: transparent;
         padding: 1em 0 0 1em;
-
+        @media (max-width: 500px){      
+            padding-top: .3rem;
+        }
         & .article-context.meta-details {
             margin-top: -.5em;
             margin-bottom: .5em;
@@ -902,9 +909,9 @@
             padding: unset;
 
             & h2.module__title {
-                font-size: .95rem;
+                font-size: .85rem;
                 text-align: left;
-                font-weight: 900;
+                // font-weight: 900;
             }
         }
 
