--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -30,7 +30,7 @@ layout: page
         <div class="article-container">
             <div class="container">
                 <div id="article-container" class="article-inner-container" data-page="{{ currentPage }}" data-totalPages="{{ paginator.total_pages }}">
-                    <ul id="search-results">
+                    <ul id="search-result">
                         <div id="article-container" class="article-inner-container" data-page="{{ currentPage }}" data-totalPages="{{ paginator.total_pages }}">
                             <ul id="search-results">
 
