--- a/_includes/algolia_search.html
+++ b/_includes/algolia_search.html
@@ -1,5 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.3.3/dist/instantsearch.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
-
 <script src="{{site.baseurl}}/assets/js/algolia_search.js"></script>
+<script src="{{ site.baseurl }}/assets/js/Vendor/lunr.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/Vendor/search.js"></script>
