--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -9,10 +9,10 @@ layout: page
            <p class="search-text"></p> 
         </div>
         
-        <!-- <form action="{{ site.baseurl }}/search/" method="get" role="search">
+        <form action="{{ site.baseurl }}/search/" method="get" role="search">
             <div class="form-content margin-utility">
                 <div class="search-bar">
-                    <label for="search-box" class="whole-search-label">
+                    <label for="search-box search_box" class="whole-search-label">
                         <span>Search</span>
                         
                         <svg class="_40e60" width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path d="M12.09 10.937a6.718 6.718 0 0 0 1.452-4.175C13.542 3.028 10.51 0 6.77 0 3.03 0 0 3.027 0 6.76a6.767 6.767 0 0 0 10.665 5.527l2.634 2.44c.404.373 1.046.36 1.427-.02.383-.381.361-.997-.046-1.374l-2.59-2.396zm-5.32.528a4.712 4.712 0 0 1-4.709-4.703 4.711 4.711 0 0 1 4.71-4.704 4.711 4.711 0 0 1 4.71 4.704 4.713 4.713 0 0 1-4.71 4.703z" fill="var(--color,#000)"></path></svg>
@@ -20,10 +20,10 @@ layout: page
                         <input type="search" id="search-box" name="query" />
                     </label>
                     
-                    <input type="submit" value="search" class="submit-btn">                      
+                    <!-- <input type="submit" value="search" class="submit-btn">                       -->
                 </div>
             </div>
-        </form>        -->
+        </form>       
     </div>
 
     <div class="search-results">
@@ -56,15 +56,14 @@ layout: page
           "category": "{{ post.category | xml_escape }}",
           "content": {{ post.content | strip_html | strip_newlines | jsonify }},
           "url": "{{ site.baseurl }}{{ post.url | xml_escape }}",
-          "imagepath":{{ post.image-path | jsonify}},
+          "imagepath":"{{ site.url }}{{ site.image-path | xml_escape }}",
           "baseurl": "{{ site.baseurl | xml_escape }}",
           "date": {{ post.date | date: '%B %-d, %Y' | jsonify }},
-          "image": "{{ post.image | xml_escape }}"
+          "image": "{{ post.images.path }}"
         }
         {% unless forloop.last %},{% endunless %}
       {% endfor %}
     };
   </script>
-  <!-- <script src="{{ site.baseurl }}/assets/js/Vendor/lunr.min.js"></script>
-  <script src="{{ site.baseurl }}/assets/js/Vendor/search.js"></script> -->
+
  
