--- a/_sass/pages/_search.scss
+++ b/_sass/pages/_search.scss
@@ -57,7 +57,7 @@ form{
     }
 
     .search-bar{
-        max-width: 700px;
+        max-width: 900px;
         margin-right: auto;
         margin-left: auto;
     }
@@ -66,7 +66,7 @@ form{
 
 .whole-search-label{
     position: relative;
-    width: 80%;
+    // width: 80%;
 
     span{
         display: none;
@@ -90,11 +90,12 @@ form{
         border-radius: 0;
         box-shadow: none;
         color: var(--clr-bg-bd-decor-int, #000);
+        color: var(--clr-typo);
         background-color: var(--clr-bg-2, #fff);
         box-sizing: border-box;
         font-size: 16px;
-        height: 45px;
-        padding: 0 45px 0 38px;
+        height: 40px;
+        padding: 0 15px 0 38px;
         width: 100%;
         transition: all 0.25s;
         border-radius: 8px;
@@ -108,11 +109,12 @@ form{
         border-radius: 8px;
         appearance: none;
         box-shadow: none;
+        outline: 0;
     }
 
     svg._40e60 {
         position: absolute;
-        top: 15px;
+        top: 12px;
         margin-left: 1em;
     }
 }
