--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,8 +34,8 @@
 <meta name="theme-color" content="#ffffff">
 
 <!-- site verifications -->
-{% if site.owner.google.verify %}<meta name="google-site-verification" content="{{ site.owner.google.verify }}">{% endif %}
-{% if site.owner.bing-verify %}<meta name="msvalidate.01" content="{{ site.owner.bing-verify }}">{% endif %}
+{% if site.google-verification %}<meta name="google-site-verification" content="{{ site.google-verification }}">{% endif %}
+{% if site.bing-verification %}<meta name="msvalidate.01" content="{{ site.bing-verification }}">{% endif %}
 
 <!-- Feed -->
 {%- if site.plugins contains 'jekyll-feed' or site.gems contains 'jekyll-feed' -%}
